@@ -1,2 +1,3 @@
 DIST rubocop-0.29.1.gem 958976 SHA256 fdef20af47f52e8130d39665fb5770fdc7cb72d9c5a5ba56078e0fe2c325f50c SHA512 378efd5da64c34d589ab7c50e177846958a502476a3dab6d63857fc4abd724c9f61d8314c98a13eb7910bed76e46caf7c38655882f5ba69bb21acd05b3dc9367 WHIRLPOOL d37987f577b58f095b681ad56b540864d1c3c66d1bb976fecb58745259e833eb5e84032c204b9c947b17610fae53da61fd44a481d68b4dde81d9300fba7c87e4
 DIST rubocop-0.30.0.tar.gz 990653 SHA256 cdd62edf036b19ebedc00d5c18f1c73d1669cc8003f5ef0c9aaed9e26c8eb144 SHA512 3ee21119c699149a48f4946cc6361dee480b8a0845e5b1f75e25ecd80a1f9586009d0c8e2400bd74bb934f9e0ae84bb6aeeb43ef084e9b5e9d279759b912cf64 WHIRLPOOL 61295a257fbda63ab7d848084a0b6a67e9e17e5bd07442fa9aa508effa93407e25d3fcd562d850fc6630513c8f18cae29afb7e1299606b82fd443bca61793f9f
+DIST rubocop-0.31.0.tar.gz 1001771 SHA256 3ce5519cbefcbb4cf1be4b75d23dc02cb98b082eba9a4fa93c848b96c04bdf4c SHA512 f9781888c927719e8d8804db95f7b9ed2101e0a15af4c65e0725afda06b22a29a234764f8e8293fef58c6d2bedcfa3bfeb3854fc6052ff2961269b484ad09c05 WHIRLPOOL c76e8baea3cdb8a5cbb67cd4380a7fb8dba10f21fafda583812cf1f42e94b6342fa3e975a83086611d570aa174b5d04f3069fafee7e426635116accabb24a33f
