@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rubocop-0.31.0 (15 May 2015)
+
+  15 May 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.31.0.ebuild:
+  Version bump.
+
 *rubocop-0.30.0 (17 Apr 2015)
 
   17 Apr 2015; Hans de Graaff <graaff@gentoo.org> +rubocop-0.30.0.ebuild:
